[tool.poetry]
name = "prompt_guardian"
version = "0.1.1"
description = ""
authors = ["BenderScript <6779302+BenderScript@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.2"
fastapi = "^0.109.0"
requests = "^2.31.0"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
prompt-injection-bench = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
